language/move-prover/tests/sources/functional/resources.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/resources.move:39:6 ───
    │
 39 │      ensures exists<R>(Signer::get_address(account));
    │      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/resources.move:32:5: create_resource_incorrect (entry)
    =     at ../stdlib/modules/Signer.move:13:5: address_of (entry)
    =     at ../stdlib/modules/Signer.move:10:23: borrow_address
    =     at ../stdlib/modules/Signer.move:14:9: address_of
    =         s = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/resources.move:33:30: create_resource_incorrect
    =         account = <redacted>
    =     at tests/sources/functional/resources.move:32:5: create_resource_incorrect (exit)
